# Nusic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
src/: app.rs  daemon.rs  error.rs  ipc.rs  main.rs  paths.rs  session.rs  system_volume.rs
src/audio/: decoder.rs  engine.rs  mod.rs
src/player/: mod.rs  queue.rs
src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
