[package]
name = "nusic"
version = "0.2.1"
edition = "2021"
description = "Cross-platform terminal music player for local files"
license = "MIT"
rust-version = "1.75"
homepage = "https://github.com/OriginCoderPulse/Nusic"
repository = "https://github.com/OriginCoderPulse/Nusic"

[[bin]]
name = "nusic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "6"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
walkdir = "2"
notify = "7"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
